Fixed whitespace errors

--- a/bstquotes.htm
+++ b/bstquotes.htm
@@ -5,27 +5,27 @@
 	<p>Any of the above quotes resonated with you?  Not already a member?</p>
 	<button>Join now</button>
 
-<!--<p>Relegation from the Championship is not considered a considerable risk to the company, as turnover will still be assisted by guaranteed parachute payments from the Premier League - Blackpool Football Club Limited Directors’ report for the year ended 31 May 2013"</p>
+<!--<p>“Relegation from the Championship is not considered a considerable risk to the company, as turnover will still be assisted by guaranteed parachute payments from the Premier League” - Blackpool Football Club Limited Directors’ report for the year ended 31 May 2013"</p>
 
-<p>Soccer isn't the same as Bach or Buddhism. But it is often more deeply felt than religion, and just as much a part of the community's fabric, a repository of traditions. 
+<p>“Soccer isn't the same as Bach or Buddhism. But it is often more deeply felt than religion, and just as much a part of the community's fabric, a repository of traditions.” 
 ― Franklin Foer</p>
 
-<p>It probably hurts me more than the supporters — Karl Oyston</p>
+<p>“It probably hurts me more than the supporters” — Karl Oyston</p>
 
-<p>Everything I know about morality and the obligations of men, I owe it to football. 
+<p>“Everything I know about morality and the obligations of men, I owe it to football.” 
 ― Albert Camus</p>
 
-<p>It will absolutely change the club forever if we go up. It can’t fail to - Karl Oyston</p>
+<p>“It will absolutely change the club forever if we go up. It can’t fail to” - Karl Oyston</p>
 
-<p>The thing about football - the important thing about football - is that it is not just about football. 
+<p>“The thing about football - the important thing about football - is that it is not just about football.” 
 ― Terry Pratchett</p>
 
-<p>I want the supporters to have a club they can be proud of - Karl Oyston</p>
+<p>“I want the supporters to have a club they can be proud of” - Karl Oyston</p>
 
 <p>"At a football club, there's a holy trinity - the players, the manager and the supporters. 
 Directors don't come into it. They are only there to sign the cheques." - Bill Shankly</p>
 
-<p>I look back at what we achieved at Blackpool and wonder if there’s a legacy. Has it been built on? At the moment I look back and there isn’t one. - Gary Taylor-Fletcher</p>
+<p>“I look back at what we achieved at Blackpool and wonder if there’s a legacy. Has it been built on? At the moment I look back and there isn’t one.” - Gary Taylor-Fletcher</p>
 
 <p>I love Blackpool. We're very similar. We both look better in the dark - Ian Holloway</p>
 
